Get all voices and insert in dropdown

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
 
                 <div class="form-input">
-                    <label for="rate">Rate <span class="badge">1</span></label>
+                    <label for="rate">Rate <span id="rate-value" class="badge">1</span></label>
                     <input
                         type="range"
                         id="rate"
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class="form-input">
-                    <label for="pitch">Pitch <span class="badge">1</span></label>
+                    <label for="pitch">Pitch <span id="pitch-value" class="badge">1</span></label>
                     <input
                         type="range"
                         id="pitch"
